TenantMigrationDonorService might start waiting for forget migration without aborting migration upon recipient errors.

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 7.3.2, 8.0.0-rc2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.0, v7.3
    • Execution Team 2024-04-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Filing this bug after a recent production issue. As per design, Shard merge is not resilience to recipient failovers or restarts. When a recipient failover/restart occur, the shardMergeRecipientService can return an error code, either ErrorCategory::NotPrimaryError or ErrorCategory::isShutdownError. The TenantMigrationDonorService assumes that if such an error is thrown, it originates always from the donor side rather than the recipient side. Consequently, it does not abort the migration and directly waits for forgetMigration.

            Assignee:
            Suganthi Mani
            Reporter:
            Suganthi Mani
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: